[package]
name = "iced-pancurses"
version = "0.1.2"
license = "MIT"
authors = ["Olivier Pinon <oliv.pinon@gmail.com>"]
description = "Toy renderer for iced based on pancurses"
homepage = "https://github.com/AlisCode/iced-pancurses"
repository = "https://github.com/AlisCode/iced-pancurses"
edition = "2018"
keywords= ["gui", "iced", "pancurses", "ncurses", "tui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_native = "0.1.0-beta" 
pancurses = "0.16.1"
